# monash-nimbus-reports

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PROBLEM_STATEMENT.md  README.md  index.html  launch-dev.bat  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: build.yml
docs/: API_FIELD_REFERENCE.md  DISTRIBUTION.md  ENTITY_MAPPING.md  IMPROVEMENT_PLAN.md  LICENSE_SYSTEM_DESIGN.md  NIMBUS_TASKS_AND_ATTENDANCES.md  REQUIREMENTS.md
scripts/: get_creds.ps1
src/: App.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: credentials.rs  http.rs  mod.rs  version.rs
src/components/: CacheLoadingModal.tsx  ConnectionModule.tsx  ConnectionSelector.tsx  LoginDialog.tsx  ReportPreferences.tsx  UpdateNotification.tsx
src/components/filters/: AgreementTypeFilter.tsx  CascadingLocationFilter.tsx  LocationGroupFilter.tsx  PersonLookupFilter.tsx
src/components/reports/: ActivitiesReport.tsx  ActivitiesReportAG.tsx  ChangeHistoryReport.tsx  CostCodeReport.tsx  DeletedAgreementsReport.tsx  EarlyApprovalReport.tsx  MissingActivitiesReport.tsx  MissingJobRolesReport.tsx  ReportFilters.tsx  UATExtractReport.tsx  UserSecurityRolesReport.tsx  dataGridStyles.ts
src/core/: agreementService.ts  authService.ts  export.ts  historyService.ts  locationGroupService.ts  lookupService.ts  nimbusLinks.ts  profileManager.ts  types.ts  versionService.ts
src/hooks/: useCostCodes.ts  useEarlyApprovals.ts  useScheduleShifts.ts  useUATExtract.ts  useUserSecurityRoles.ts
src/stores/: connectionStore.ts  reportSettingsStore.ts
tests/: discover-test-data.api.spec.ts  nimbus-api.api.spec.ts  quick.api.spec.ts  regression.api.spec.ts  report-verification.api.spec.ts  test-data.ts
