[package]
name = "monash-nimbus-reports"
version = "0.2.1"
description = "Monash University Nimbus Reporting Tool"
authors = ["John D"]
edition = "2021"

[lib]
name = "monash_nimbus_reports_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "monash-nimbus-reports"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for Nimbus API calls (read-only)
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# URL encoding
urlencoding = "2"

# =============================================================================
# Platform-specific dependencies
# =============================================================================

# Secure credential storage - Windows (Credential Manager)
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

# Secure credential storage - macOS (Keychain)
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
